消息传递框架

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Concurrency)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp thread_guard.h threadsafe_stack.h hierarchical_mutex.h)
+set(SOURCE_FILES main.cpp thread_guard.h threadsafe_stack.h hierarchical_mutex.h blocking_queue.h spinlock_mutex.h)
 add_executable(Concurrency ${SOURCE_FILES})
